[package]
edition = "2018"
name = "newsletter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.5"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
